// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LayoutHeaderToolsLogoutButton should match the snapshot, when isMobile is false 1`] = `
<div>
  <a
    class="fr-btn fr-fi-logout-box-r-line"
    data-testid="layout-header-tools-logout-button-desktop"
    href="Any"
    title="bouton permettant la déconnexion de votre compte"
  >
    <span>
      Se déconnecter
    </span>
  </a>
</div>
`;

exports[`LayoutHeaderToolsLogoutButton should match the snapshot, when isMobile is true 1`] = `
<div>
  <a
    class="fr-btn fr-fi-logout-box-r-line"
    data-testid="layout-header-tools-logout-button-mobile"
    href="Any"
    title="bouton permettant la déconnexion de votre compte"
  >
    <span>
      Se déconnecter
    </span>
  </a>
</div>
`;
